--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="GoogleMaps.LocationServices" Version="1.2.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Runtime" Version="4.3.1" />
   </ItemGroup>
 
 
